Fix baseURL for proper CSS loading

--- a/blog/hugo.toml
+++ b/blog/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://mamadadapapamama.github.io/Bootleg'
+baseURL = 'https://mamadadapapamama.github.io/blogblog/'
 languageCode = 'en'
 title = 'Just Vibing & Trying'
 theme = 'PaperMod'
